--- a/Training/index.html
+++ b/Training/index.html
@@ -48,7 +48,7 @@
                 <div id="content">
                 <h2>Retro Kicks</h2>
                 <h1>Vomero 5 & More</h1>
-                <button>Shop</button>
+                <a href="shop/shop.html"><button>Shop</button></a>
                 </div>
             </div>
             <div class="row item-2">
@@ -56,28 +56,155 @@
                 <div id="content">
                 <h2>Freedom and Stability</h2>
                 <h1>Nike Free Metcon 6</h1>
-                <button>Shop</button>
+                <a href="shop/shop.html"><button>Shop</button></a>
                 </div>
             </div>
-            <div class="row1 item-3">
+            <div class="row item-3">
                 <img src="images/item-3.jpeg" alt="image">
                 <div id="content">
                 <h2>Trending</h2>
                 <h1>Classic Black and White</h1>
-                <button>Shop</button>
+                <a href="shop/shop.html"><button>Shop</button></a>
                 </div>
             </div>
-            <div class="row1 item-4">
+            <div class="row item-4">
                 <img src="images/item-4.jpeg" alt="image">
                 <div id="content">
                 <h2>New Arrivals</h2>
                 <h1>Air Jordan 4 "Oxidized Green"</h1>
-                <button>Shop</button>
+                <a href="shop/shop.html"><button>Shop</button></a>
                 </div>
             </div>
         </div>
-        <h1>NEW THIS WEEK</h1>
+        <div class="text">
+            <h1>NEW THIS WEEK</h1>
+            <button>Shop New Arrivals</button>
+        </div>
+        <img src="images/3guy.jpeg" alt="guy" id="single_image">
+    <div id="shop_list">
+        <h1>SHOP BY CLASSICS</h1>
+        <div id="list">
+        <img src="images/1.jpeg" alt="1">
+        <img src="images/2.jpeg" alt="1">
+        <img src="images/3.jpeg" alt="1">
+        <img src="images/4.jpeg" alt="1">
+         </div>
+    </div>
+             <h1 class="membership_header">NIKE MEMBERSHIP</h1>
+    <div id="membership">
+    <div class="item1">
+        <img src="images/bottom1.jpeg" alt="11">
+        <div class="content1">
+            <h2>Member Product</h2>
+            <h1>You Exclusive Access</h1>
+            <a href="shop/shop.html"><button>Shop</button></a>
+            </div>
+    </div>
+    <div class="item1">
+        <img src="images/bottom3.jpeg" alt="11">
+        <div class="content1">
+            <h2>Sport & Wellness Apps</h2>
+            <h1>Movement Where You're At</h1>
+            <a href="shop/shop.html"><button>Shop</button></a>
+            </div>
+    </div>
+    <div class="item1">
+        <img src="images/bottom1.jpeg" alt="11">
+        <div class="content1">
+            <h2>Nike By You</h2>
+            <h1>Your Customization Service</h1>
+            <a href="shop/shop.html"><button>Shop</button></a>
+            </div>
+    </div>
+    </div>
+
+    <div id="features">
+        <div class="column">
+            <a href="#"><h4>Featured</h4></a>
+            <a href="#">Air Force 1</a>
+            <a href="#">Jordan 1</a>
+            <a href="#">Metcon</a>
+            <a href="#">Airmax 270</a>
+        </div>
+        <div class="column">
+            <a href="#"><h4>Shoes</h4></a>
+            <a href="#">All Shoes</a>
+            <a href="#">Jordan Shoes</a>
+            <a href="#">Running Shoes</a>
+            <a href="#">Basketball Shoes</a>
+        </div>
+        <div class="column">
+            <a href="#"><h4>Clothes</h4></a>
+            <a href="#">All Clothing</a>
+            <a href="#">Top & T-Shirt</a>
+            <a href="#">Shorts</a>
+            <a href="#">Hoodies & Pullovers</a>
+        </div>
+        <div class="column">
+            <a href="#"><h4>Kids</h4></a>
+            <a href="#">Infant & Toddler Shoes</a>
+            <a href="#">Kids Shoes</a>
+            <a href="#">Kids Basketball Shoes</a>
+            <a href="#">Kids Running Shoes</a>
+        </div>
+    </div>
+    <hr width="80%">
     </main>
+
+    <footer>
+        <div id="last">
+            <div class="column_content">
+                <a href="#"><h4>Resources</h4></a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Find a Store</a>
+                <a href="#">Become a Member</a>
+                <a href="#">Nike x NBA</a>
+                <a href="#">Nike Journal</a>
+                <a href="#">Site Feedback</a>
+            </div>
+            <div class="column_content">
+                <a href="#"><h4>Help</h4></a>
+                <a href="#">Get Help</a>
+                <a href="#">Order Status</a>
+                <a href="#">Shipping and Delivery</a>
+                <a href="#">Returns</a>
+                <a href="#">Order Cancellation</a>
+                <a href="#">Payment Options</a>
+                <a href="#">Gift Card Balance</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="column_content">
+                <a href="#"><h4>Company</h4></a>
+                <a href="#">About Nike</a>
+                <a href="#">News</a>
+                <a href="#">Careers</a>
+                <a href="#">Investors</a>
+                <a href="#">Purpose</a>
+                <a href="#">Sustainability</a>
+            </div>
+            <div class="column_content">
+                <a href="#"><h4>Promotions & Discount</h4></a>
+                <a href="#">Student</a>
+                <a href="#">Military</a>
+                <a href="#">Teacher</a>
+                <a href="#">First Responders & Medical Professionals</a>
+                <a href="#">Birthday</a>
+            </div>
+            <div class="column_content">
+                <a href="#"><h4>United States</h4></a>
+            </div>
+        </div>
+
+        <div id="gray">
+            <a href="#">© 2024 Nike, Inc. All Rights Reserved</a>
+            <a href="Guides">Guides</a>
+            <a href="#">Terms of Sale</a>
+            <a href="#">Terms of Use</a>
+            <a href="#">Nike Privacy Choices</a>
+            <a href="#">Your Privacy Choices</a>
+            <a href="#">CA Supply Chains Act</a>
+        </div>
+    </footer>
 
 </body>
 </html>
